# kadena-crypto-ghcjs

./: .gitignore  CHANGELOG.md  README.md  Test.hs  default.nix  kadena-crypto-ghcjs.cabal  project.nix  shell.nix
dep/cardano-crypto.js/: github.json
dep/ghcjs-promise/: github.json
js-bits/: kadena-crypto.js
src/: KadenaCrypto.hs
