cabal-version:       >=1.10
name:                kadena-crypto-ghcjs
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
-- license-file:        LICENSE
author:              Jacquin Mininger
maintainer:          jacquin.mininger@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  hs-source-dirs: src
  js-sources: js-bits/mock-js.js, js-bits/kadena-crypto.js
  build-depends:        
      base
    , ghcjs-base
    , ghcjs-promise
    , jsaddle
    , text
    , bytestring
  exposed-modules: KadenaCrypto
  default-language:    Haskell2010

executable test
  main-is:        Test.hs
  -- other-modules:
  -- other-extensions:
  build-depends:
                     base
                   , bytestring
                   , ghcjs-base
                   , ghcjs-promise
                   , base16-bytestring
                   , jsaddle
                   , kadena-crypto-ghcjs
                   , text
  default-language:    Haskell2010
