name:               kadena-crypto-ghcjs
version:            0.1.0.0
author:             Jacquin Mininger
maintainer:         jacquin.mininger@gmail.com
build-type:         Simple
extra-source-files: CHANGELOG.md
cabal-version:      >= 1.10

library
  exposed-modules:  KadenaCrypto
  hs-source-dirs:   src
  build-depends:    base
                  , bytestring
                  , ghcjs-base
                  , jsaddle
                  , text
  js-sources:       js-bits/kadena-crypto.js
  default-language: Haskell2010

  -- if !impl(ghcjs) && !os(ghcjs)
    -- buildable: False

executable test
  main-is:          Test.hs
  build-depends:    base
                  , base16-bytestring
                  , bytestring
                  , jsaddle
                  , kadena-crypto-ghcjs
                  , text
  default-language: Haskell2010

  if !impl(ghcjs) && !os(ghcjs)
    buildable: False
